package seedu.address.model;

/**
 * Represents the current mode of the UI display.
 */
public enum DisplayMode {
    PERSONS,
    STUDENTS,
    COURSES,
    COURSE_DETAILS,
    ASSESSMENTS,
    GRADES,
    OVERVIEW
}
