@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

package Model as ModelPackage <<Rectangle>> {
    class "<<interface>>\nReadOnlyAddressBook" as ReadOnlyAddressBook
    class "<<interface>>\nReadOnlyUserPrefs" as ReadOnlyUserPrefs
    class "<<interface>>\nModel" as Model

    class AddressBook
    class ModelManager
    class UserPrefs
    enum DisplayMode
}

AddressBook .up.|> ReadOnlyAddressBook
UserPrefs .up.|> ReadOnlyUserPrefs
ModelManager .up.|> Model

Model .left.> ReadOnlyAddressBook
Model .right.> ReadOnlyUserPrefs

ModelManager --> "1" AddressBook
ModelManager --> "1" UserPrefs
ModelManager --> "1" DisplayMode

note right of ModelManager
Maintains filtered views used by the UI
for courses, students, assessments, and grades.
These filtered collections are omitted
from the class diagram for simplicity.
end note
@enduml
